feat: include_user flag in shelter list
