# docs/swagger.yaml
@@ -1,51 +1,5 @@
 basePath: /
 definitions:
-  auth.CustomClaims:
-    properties:
-      aud:
-        description: the `aud` (Audience) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.3
-        items:
-          type: string
-        type: array
-      created_at:
-        type: string
-      email:
-        type: string
-      exp:
-        $ref: '#/definitions/jwt.NumericDate'
-        description: the `exp` (Expiration Time) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.4
-      iat:
-        $ref: '#/definitions/jwt.NumericDate'
-        description: the `iat` (Issued At) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.6
-      id:
-        type: string
-      is_admin:
-        type: boolean
-      is_org:
-        type: boolean
-      iss:
-        description: the `iss` (Issuer) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.1
-        type: string
-      jti:
-        description: the `jti` (JWT ID) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.7
-        type: string
-      line_uid:
-        type: string
-      name:
-        type: string
-      nbf:
-        $ref: '#/definitions/jwt.NumericDate'
-        description: the `nbf` (Not Before) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.5
-      password:
-        type: string
-      picture_url:
-        type: string
-      sub:
-        description: the `sub` (Subject) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.2
-        type: string
-      updated_at:
-        type: string
-    type: object
   auth.loginBody:
     properties:
       email:
@@ -56,11 +10,6 @@ definitions:
   img.UploadResp:
     properties:
       downloadURL:
-        type: string
-    type: object
-  jwt.NumericDate:
-    properties:
-      time.Time:
         type: string
     type: object
   pet.CreateBody:
@@ -267,7 +216,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/auth.CustomClaims'
+            $ref: '#/definitions/repository.User'
         "400":
           description: Bad Request
           schema:
